# ccache

./: .gitmodules  CMakeLists.txt
include/ccache/: 2q.h  ccache.h  fifo.h  lru.h
src/: 2q.c  CMakeLists.txt  fifo.c  list.c  list.h  lru.c
tests/: CMakeLists.txt  test-common.h  test-lru.c  test-main.c
